--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: space-around;
-        background: url(./imagenes/headerHorizontal.jpg)no-repeat center center;
+        background: url(./imagenes/headertesteo2.png)no-repeat center center;
         background-size: cover;
         width: 100%;
         animation-name: latido;
@@ -89,6 +89,7 @@
         display: flex;
         list-style: none;
         padding: 15px;
+        margin-left: -4rem;
         
 
     }
@@ -173,6 +174,7 @@
     .hero_BTN:hover {
         background: var(--negro);
         box-shadow: 2px 2px 2px 1px var(--naranja);
+        cursor: pointer;
     }
     .btnhero__link {
         text-decoration: none;
@@ -440,6 +442,24 @@
 }
 
 @media (max-width:500px) {
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .header {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-around;
+        background: url(./imagenes/headertesteo2.png)no-repeat center center;
+        background-size: cover;
+        width: 100%;
+        animation-name: latido;
+        animation-iteration-count: infinite;
+        animation-duration: 2s;
+        transition: all ease 0.3s;
+        height: 16rem;
+    }
 
     /* ------------menu y nav---------------------- */
     .box_Menu {
@@ -493,7 +513,7 @@
     }
     
     .menu-toogle:checked ~ .box_Menu {
-        height: 14rem;
+        height: 16rem;
         width: 90%;
         background:var(--grisoscuro);
         z-index: 1;
@@ -521,7 +541,7 @@
     .menu-toogle:checked ~ label > div:nth-child(1) {
         transform: rotate(45deg);
         margin-top: 18px;
-        background: var(--grisclaro);      
+        background: var(--naranja);      
     }
       
       .menu-toogle:checked ~  label > div:nth-child(2) {
@@ -531,7 +551,7 @@
       .menu-toogle:checked ~ label > div:nth-child(3) {
         transform: rotate(-45deg);
         margin-top: -20px;
-        background: var(--grisclaro);       
+        background: var(--naranja);       
     }
     .li_Menu a {
         text-decoration: none;
@@ -548,13 +568,337 @@
         width: 6rem;
         margin-left: 8rem;
         margin-top: 1rem;
-        /* animation-name: latido;
+        animation-name: latido;
         animation-iteration-count: infinite;
         animation-duration: 3s;
         transition: all ease 0.3s;
-        animation-direction: alternate; */
+        animation-direction: alternate;
         box-shadow: 2px 2px 2px 1px var(--naranja);
     }
      /* ---------------------------------- */
+     .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 92%;
+        background: rgb(245, 245, 245);
+        margin-top: -4rem;
+        border-radius: 1rem;
+        
+    }
+     /* -------------hero--------------------- */
+    .hero {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 2rem;
+    }
+    .hero__img {
+        width: 22rem;
+        border-radius: 1rem;
+        margin-top: 2rem;
+    }
+    .hero__texto {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        margin-top: 2rem;
+    }
+    .hero__h1 {
+        font-size: 3.5rem;
+        color: var(--naranja);
+    }
+    .hero__titulo {
+        font-family: var(--font2);
+        width: 80%;
+        text-align: center;
+        margin-top: 1.5rem;
+        font-size: 2rem;
+    }
+    .resaltar1 {
+        color: var(--naranja);
+        animation-iteration-count: infinite;
+        transition: all ease;
+        font-family: var(--font2);
+    }
+    .hero__p {
+        text-align: center;
+        font-size: 1.2rem;
+        width: 80%;
+    }
+    .hero_BTN {
+        width: 18rem;
+        height: 3.5rem;
+        border-radius: 0.8rem;
+        border: none;
+        background: var(--naranja);
+        box-shadow: 2px 2px 2px 1px var(--negro);
+        font-family: var(--font2);
+        color: var(--grisclaro);
+        font-size: 1.5rem;
+    }
+    .hero_BTN:hover {
+        background: var(--negro);
+        box-shadow: 2px 2px 2px 1px var(--naranja);
+        cursor: pointer;
+    }
+    .btnhero__link {
+        text-decoration: none;
+        color: var(--grisclaro);
+    }
+     /* ---------------------------------- */
+       /* --------------servicios-------------------- */
+    .servicios {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        height: 30rem;
+        margin-bottom: 2rem;
+
+    }
+    .gimnasios {
+        background: url(./imagenes/tarjeta1.png)no-repeat center center;
+        background-size: cover;
+        width: 22rem;
+        height: 16rem;
+        border-radius: 1rem;
+        animation-name: latido2;
+        animation-iteration-count: infinite;
+        animation-duration: 2s;
+        transition: all ease 0.3s;
+        padding: 1rem;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+        
+    }
+    .gimnasios p {
+        text-align: left;
+        position: relative;
+        left: 0rem;
+        top: -2rem;
+        font-size: 1.5rem;
+        font-family: var(--font2);
+    }
+    .individuos {
+        background: url(./imagenes/tarjeta3.png)no-repeat center center;
+        background-size: cover;
+        width: 22rem;
+        height: 16rem;
+        border-radius: 1rem;
+        animation-name: latido2;
+        animation-iteration-count: infinite;
+        animation-duration: 2s;
+        transition: all ease 0.3s;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .individuos p {
+        text-align: left;
+        position: relative;
+        left: 1rem;
+        top: -2rem;
+        font-size: 1.5rem;
+        font-family: var(--font2);
+    }
+    .btn__info1 {
+        width: 14rem;
+        height: 3.5rem;
+        border-radius: 0.8rem;
+        border: none;
+        background: var(--negro);
+        position: relative;
+        left: 0.5rem;
+    }
+    .btn__info1:hover {
+        background: var(--naranja);
+    }
+    .btn__info2:hover {
+        background: var(--naranja);
+    }
+    .btn__info2 {
+        width: 12rem;
+        height: 3.5rem;
+        border-radius: 0.8rem;
+        border: none;
+        background: var(--negro);
+        position: relative;
+        left: 0.8rem;
+    }
+    .linkinfo {
+        text-decoration: none;
+        color: var(--naranja);
+        font-size: 2rem;
+        font-family: var(--font2);
+    }
+    .btn__info2:hover a{
+        color: white;
+    }
+    .btn__info1:hover a{
+        color: white;
+    }
+     /* ---------------------------------- */
+      /* -------------Popups--------------------- */
+    
+    .overlay1 { 
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.4);
+        transition: opacity 500ms;
+        visibility: hidden;
+        opacity: 0;
+        overflow: auto;
+    }
+    .overlay1:target {
+        visibility: visible;
+        opacity: 1;
+        z-index: 99;
+    }
+    #popupBody1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: white;
+        width: 95%;
+        position: relative;
+        margin: 8% auto;
+        gap: 1rem;
+        border-radius: 8px;
+        height: 90vh;
+        animation-name: latido2;
+        animation-iteration-count: infinite;
+        animation-duration: 2s;
+        transition: all ease 0.3s;
+    }
+    .overlay2 { 
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.4);
+        transition: opacity 500ms;
+        visibility: hidden;
+        opacity: 0;
+        overflow: auto;
+    }
+    .overlay2:target {
+        visibility: visible;
+        opacity: 1;
+        z-index: 99;
+    }
+    #popupBody2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: white;
+        width: 95%;
+        position: relative;
+        margin: 8% auto;
+        gap: 1rem;
+        border-radius: 8px;
+        height: 90vh;
+        animation-name: latido2;
+        animation-iteration-count: infinite;
+        animation-duration: 2s;
+        transition: all ease 0.3s;
+    }
+    #cerrar1 {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: black;
+        transition: all 200ms;
+    }
+    #cerrar2 {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: black;
+        transition: all 200ms;
+    }
+    .imgpop {
+        width: 14rem;
+        padding: 1rem;
+        
+        
+    }
+    .imgpop2 {
+        width: 18rem;
+        padding: 1rem;
+        
+    }
+    .boxpopup2 {
+        width: 90%;
+        
+    }
+    .boxpopup2 h2 {
+        font-family: var(--font2);
+        color: var(--naranja);
+        font-size: 2rem;
+        text-align: center;
+    }
+    .boxpopup2 h3 {
+        font-size: 1.4rem;
+        text-align: center;
+    }
+    .boxpopup2 p {
+        font-size: 1rem;
+    }
+    .contacto {
+        width: 100%;
+        height: 30rem;
+        background: url(./imagenes/dumbbells-6018512_1920.jpg)no-repeat center center;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
+    .contacto h2 {
+        font-size: 2rem;
+        font-family: var(--font2);
+    }
+    .contacto input {
+        width: 20rem;
+        border-radius: 0.5rem;
+        height: 3rem;
+        text-align: center;
+        border: var(--negro) 0.8px solid;
+        border: solid 1px var(--naranja);
+        outline: none;
+    }
+    .contacto input:focus {
+        border: solid 3px var(--amarillo);
+    }
+    .btnenviar {
+        background: var(--negro);
+        color: var(--grisclaro);
+        font-size: 2rem;
+        font-family: var(--font2);
+        margin-bottom: 2rem;
+    }
 }
 
