--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@
         transform-style: preserve-3d;
         position: relative;
         transition: transform .75s;
-        cubic-bezier(0.4, 0.03, 0.5, 0.9);
+        transition-timing-function:(0.4, 0.03, 0.5, 0.9);
         border-radius: 1rem;
     }
     .card__image {
@@ -586,7 +586,7 @@
         transform-style: preserve-3d;
         position: relative;
         transition: transform .75s;
-        cubic-bezier(0.4, 0.03, 0.5, 0.9);
+        transition-timing-function:(0.4, 0.03, 0.5, 0.9);
         border-radius: 1rem;
 
     }
@@ -1101,7 +1101,7 @@
         transform-style: preserve-3d;
         position: relative;
         transition: transform .75s;
-        cubic-bezier(0.4, 0.03, 0.5, 0.9);
+        transition-timing-function:(0.4, 0.03, 0.5, 0.9);
         border-radius: 1rem;
 
     }
@@ -1620,7 +1620,7 @@
         transform-style: preserve-3d;
         position: relative;
         transition: transform .75s;
-        cubic-bezier(0.4, 0.03, 0.5, 0.9);
+        transition-timing-function:(0.4, 0.03, 0.5, 0.9);
         border-radius: 1rem;
     }
     .card__image {
